--- a/templates/error.html
+++ b/templates/error.html
@@ -10,6 +10,7 @@
     <div class="container">
   <div class="two-thirds column" style="margin-top: 5%">
   <h1>💩 There has been an error</h1>
+  <p> <a href="{{url_for('index')}}">Home</a> | <a href="{{url_for('bestOverall')}}">Best Overall</a> | <a href="{{url_for('mostAvailable')}}">Most Available</a> | <a href="{{url_for('mostClean')}}">Cleanest</a> | <a href="{{url_for('bestLighting')}}">Best Lighting</a> | <a href="{{url_for('mostSpace')}}">Most Spacious</a> </p>
   <h5> A system for scoring site facilities.</h5>
   </div>
     <div class="row">
